add assets sell operation
